# pptx-helper

./: .gitignore  main.py  pyproject.toml  style.css
util/: Helper.py
